package co.vinod.training.entity;

public interface MusicPlayer {
    void play();
    void pause();
}
