package co.vinod.training.entity;

public class Phone {
    public void dail(){
        System.out.println("dialing..");
    }
    public void ring(){
        System.out.println("ringing..");
    }
}
